--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!doctype html>
 <html>
 <head>
-  <title>Bad Ass Public Transit || A civilized approach to public commuting</title>
+<title>Bad Ass Public Transit || Civilized public commuting</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="jquery.xml2json.js"></script>
   <script src="eventPage.js"></script>
 </head>
 <body>
@@ -10,26 +12,26 @@
     <div id="title">
       <h2>Track your transit</h2>
     </div>
-  <form action="transit-selection">
-    <legend>Select Route</legend>
-    <p>
-      <label for="list-items">Your Options</label>
-      <select name="transit" id="myTransit">
-        <option value="1">one</option>
-        <option value="2">two</option>
-        <option value="3">three</option>
-        <option value="4">four</option>
-      </select>
-    </p>
-  </form>
+    <form action="transit-selection">
+      <legend>Select Route</legend>
+      <p>
+        <label for="list-items">Your Options</label>
+        <select name="transit" id="myTransit">
+          <option value="1">one</option>
+          <option value="2">two</option>
+          <option value="3">three</option>
+          <option value="4">four</option>
+        </select>
+      </p>
+    </form>
 
-  <style>
-    body {
-      min-width: 357px;
-      overflow-x: hidden;
-    }
+    <style>
+      body {
+        min-width: 357px;
+        overflow-x: hidden;
+      }
 
-  </style>
-</body>
-</html>
+    </style>
+  </body>
+  </html>
 
