jquery now stored in local package

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title>Bad Ass Public Transit || Civilized public commuting</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="jquery.xml2json.js"></script>
-  <script src="eventPage.js"></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery.xml2json.js"></script>
+  <script src="js/eventPage.js"></script>
 </head>
 <body>
 
