station ids appearing as option values

--- a/index.html
+++ b/index.html
@@ -16,13 +16,9 @@
     <form action="transit-selection">
       <legend>Select Route</legend>
       <p id="route">
-      
-        <label for="list-items">Your Options</label>
+
+        <label for="list-items">Your Stop</label>
         <select name="transit" id="myTransit">
-          <option value="1">one</option>
-          <option value="2">two</option>
-          <option value="3">three</option>
-          <option value="4">four</option>
         </select>
       </form>
 
