epochTimes outputting to html

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         </select>
       </form>
 
-      <div id="upcoming"></div>
+      <h3 id="yourTimes"></h3>
+      <ul id="upcoming"></ul>
 
       <style>
         body {
