moment.js included to format upcoming bus times

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Bad Ass Public Transit || Civilized public commuting</title>
   <script src="js/jquery.js"></script>
   <script src="js/jquery.xml2json.js"></script>
+  <script src="js/moment.js"></script>
   <script src="js/eventPage.js"></script>
 </head>
 <body>
@@ -24,6 +25,10 @@
 
       <h3 id="yourTimes"></h3>
       <ul id="upcoming"></ul>
+    </div>
+
+
+
 
       <style>
         body {
