options js and html page created

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <script src="js/jquery.xml2json.js"></script>
   <script src="js/moment.js"></script>
   <script src="js/eventPage.js"></script>
+  <script src="js/background.js"></script>
 </head>
 <body>
 
@@ -34,6 +35,10 @@
         body {
           min-width: 357px;
           overflow-x: hidden;
+        }
+
+        #upcoming {
+          list-style: none;
         }
 
       </style>
