--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
 <head>
-  <title>Bad Ass Public Transit || Civilized public commuting</title>
+  <title>Better Arrivals Public Transit || Civilized public commuting</title>
+  <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -44,7 +45,19 @@
 
     #upcoming {
       list-style: none;
+      font-family: 'Orbitron', sans-serif;
+      text-align: center;
     }
+
+    #yourTimes {
+      text-align: center;
+    }
+
+    #upcoming li:first-child {
+      font-size: 40px;
+    }
+
+
 
   </style>
 
