time convert moved into a named function

--- a/options.html
+++ b/options.html
@@ -8,11 +8,20 @@
   <h1>Customize Your Ride</h1>
 
   <h2>Your favourite routes</h2>
-  <select name="vehicles" id="vehicles">
+  <form action="route-selection">      
+    <label for="direction-names">Your Route</label>
+    <select name="transit" id="myRoute">
+    </select> 
     
-  </select>
-  
+    <div id="status"></div>
+    <button id="save">Save</button>
 
+  </form>
+
+
+  
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery.xml2json.js"></script>
   <script src="js/options.js"></script>
 </body>
 </html>
