--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>Better Arrivals Public Transit || Civilized public commuting</title>
   <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -39,6 +40,7 @@
 
   <style>
     body {
+      font-family: 'Open Sans', sans-serif;
       min-width: 357px;
       overflow-x: hidden;
     }
@@ -46,6 +48,10 @@
     #upcoming {
       list-style: none;
       font-family: 'Orbitron', sans-serif;
+      text-align: center;
+    }
+
+    #upcoming li {
       text-align: center;
     }
 
