station tags with _ar suffix no longer appending to list

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     </form>
 
     <h4 id="yourTimes"></h4>
+    <p id="routeDirections"></p>
     <ul id="upcoming"></ul>
   </div>
 
@@ -43,6 +44,7 @@
       font-family: 'Open Sans', sans-serif;
       min-width: 357px;
       overflow-x: hidden;
+      text-align: center;
     }
 
     #upcoming {
@@ -51,13 +53,7 @@
       text-align: center;
     }
 
-    #upcoming li {
-      text-align: center;
-    }
 
-    #yourTimes {
-      text-align: center;
-    }
 
     #upcoming li:first-child {
       font-size: 40px;
