working towards options page taking charge of routes and popup displaying upcoming times

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </div>
 
     <form action="route-selection">      
-      <label for="direction-names">Your Route</label>
+      <label for="route-names">Your Route</label>
       <select name="transit" id="myRoute">
       </select> 
     </form>
@@ -53,19 +53,16 @@
       text-align: center;
     }
 
-
-
     #upcoming li:first-child {
       font-size: 40px;
     }
-
-
 
   </style>
 
   <script src="js/jquery.js"></script>
   <script src="js/jquery.xml2json.js"></script>
   <script src="js/moment.js"></script>
+  <script src="js/options.js"></script>
   <script src="js/eventPage.js"></script>
 </body>
 </html>
