user's favourite route appearing on pop up via options page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 <body>
 
   <div id="body">
+
+    <h2>My Favourites</h2>
+    <div id="favourites-list"></div>
+
     <div id="title">
       <h2>Track your transit</h2>
       <p id="route"></p>
@@ -62,7 +66,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/jquery.xml2json.js"></script>
   <script src="js/moment.js"></script>
-  <script src="js/options.js"></script>
+
   <script src="js/eventPage.js"></script>
 </body>
 </html>
