--- a/options.html
+++ b/options.html
@@ -25,6 +25,10 @@
   <div id="status"></div>
   <button id="save">Save</button>
 
+  <h2>My Favourites</h2>
+  <div id="favourites-list"></div>
+
+
   <style>
     body {
       font-family: 'Open Sans', sans-serif;
