--- a/options.html
+++ b/options.html
@@ -52,6 +52,7 @@
 
   <script src="js/jquery.js"></script>
   <script src="js/jquery.xml2json.js"></script>
+  <script src="js/moment.js"></script>
   <script src="js/options.js"></script>
 </body>
 </html>
