--- a/options.html
+++ b/options.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>bapt Options</title>
+  <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <link href='stylesheets/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <h1>Customize Your Ride</h1>
@@ -10,17 +13,25 @@
 
   <h2>Your favourite routes</h2>
 
-  <label for="route-names">Your Route</label>
-  <select name="transit" id="myRoute">
-  </select> 
+  <form>     
+    <label for="route-names">Your Route</label>
+    <div class="styled-select">
+      <select name="transit" id="myRoute">
+      </select> 
+    </div>
 
-  <label for="direction-names">Your Direction</label>
-  <select name="transit" id="myDirection">
-  </select> 
+    <label for="direction-names">Your Direction</label>
+    <div class="styled-select">
+      <select name="transit" id="myDirection">
+      </select>
+    </div>
 
-  <label for="stop-names">Your Stop</label>
-  <select name="stops" id="myStop">
-  </select>
+    <label for="stop-names">Your Stop</label>
+    <div class="styled-select">
+      <select name="stops" id="myStop">
+      </select>
+    </div>
+  </form>
 
   <div id="status"></div>
   <button id="save">Save</button>
@@ -35,17 +46,6 @@
       min-width: 357px;
       overflow-x: hidden;
     }
-
-    #upcoming {
-      list-style: none;
-      font-family: 'Orbitron', sans-serif;
-      text-align: center;
-    }
-
-    #upcoming li:first-child {
-      font-size: 40px;
-    }
-
   </style>
 
 
