--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <title>Better Arrivals Public Transit || Civilized Public Commuting</title>
   <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
-  <link href='stylesheets/style.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
@@ -66,7 +65,7 @@
       background: transparent;
       width: 350px;
       padding: 5px;
-      font-size: 10px;
+      font-size: 15px;
       line-height: 1;
       border: 0;
       border-radius: 3px;
@@ -77,8 +76,9 @@
     .styled-select {
       width: 350px;
       height: 34px;
+      margin: 10px 0;
       overflow: hidden;
-      background: url(select-arrow.png) no-repeat right #ddd;
+      background: url('Images/select-arrow.png') no-repeat right #ddd;
       border: 1px solid #ccc;
     }
   </style>
