multiple favourtie routes persisting to local storage

--- a/options.html
+++ b/options.html
@@ -33,10 +33,10 @@
   </form>
 
   <div id="status"></div>
-  <button id="save">Save</button>
+  <button id="save">Add to Favourites</button>
 
   <h2>My Favourites</h2>
-  <div id="favourites-list"></div>
+  <div id="favorites-list"></div>
 
 
   <style>
@@ -78,6 +78,12 @@
 
     #status {
       padding-top: 20px;
+    }
+
+    .remove-button {
+      position: absolute;
+      left: 230px;
+      padding: 2px;
     }
   </style>
 
