--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <div id="body">
 
-    <h2>My Favourites</h2>
+    <h2>Route Voyeur</h2>
     <div id="favouritesList"></div>
     <ul id="favouriteTimes"></ul>
 
