--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>bapt Options</title>
+  <title>Route Voyeur Options</title>
   <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
@@ -37,6 +37,10 @@
 
   <h2>My Favourites</h2>
   <div id="favorites-list"></div>
+
+  <h4 id="yourTimes"></h4>
+  <p id="routeDirections"></p>
+  <ul id="upcoming"></ul>
 
 
   <style>
