stop url being saved with favourite route

--- a/options.html
+++ b/options.html
@@ -35,6 +35,8 @@
   <div id="status"></div>
   <button id="save">Add to Favourites</button>
 
+  <p id="stop-url"></p>
+
   <h2>My Favourites</h2>
   <div id="favorites-list"></div>
 
