stop name attached to no prediction data

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-  <title>Route Voyeur || Civilized Public Commuting</title>
+  <title>Route Voy || Civilized Public Commuting</title>
   <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
@@ -10,7 +10,7 @@
   <div id="body">
 
     <h2>Route Voyeur</h2>
-    <div id="favouritesList"></div>
+    <div id="favorites-list"></div>
     <ul id="favouriteTimes"></ul>
 
     <div id="title">
@@ -38,7 +38,11 @@
       </div>
     </form>
 
+    <div id="status"></div>
+    <button id="save">Add to Favourites</button>
+
     <h4 id="yourTimes"></h4>
+    <h4 id="no-prediction"></h4>
     <p id="routeDirections"></p>
     <ul id="upcoming"></ul>
   </div>
