--- a/index.html
+++ b/index.html
@@ -1,51 +1,93 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>Route Voy || Civilized Public Commuting</title>
+  <meta charset="UTF-8">
+  <title>Route Voyeur Options</title>
   <link href='http://fonts.googleapis.com/css?family=Orbitron' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 <body>
+  <h1>Route Voyeur</h1>
 
-  <div id="body">
 
-    <h2>Route Voyeur</h2>
-    <div id="favorites-list"></div>
-    <ul id="favouriteTimes"></ul>
+  <h2>Your favourite routes</h2>
 
-    <div id="title">
-      <h2>Track your transit</h2>
-      <p id="route"></p>
+  <form>     
+    <label for="route-names">Your Route</label>
+    <div class="styled-select">
+      <select name="transit" id="myRoute">
+      </select> 
     </div>
 
-    <form>     
-      <label for="route-names">Your Route</label>
-      <div class="styled-select">
-        <select name="transit" id="myRoute">
-        </select> 
-      </div>
+    <label for="direction-names">Your Direction</label>
+    <div class="styled-select">
+      <select name="transit" id="myDirection">
+      </select>
+    </div>
 
-      <label for="direction-names">Your Direction</label>
-      <div class="styled-select">
-        <select name="transit" id="myDirection">
-        </select>
-      </div>
+    <label for="stop-names">Your Stop</label>
+    <div class="styled-select">
+      <select name="stops" id="myStop">
+      </select>
+    </div>
+  </form>
 
-      <label for="stop-names">Your Stop</label>
-      <div class="styled-select">
-        <select name="stops" id="myStop">
-        </select>
-      </div>
-    </form>
+  <div id="status"></div>
+  <button id="save">Add to Favourites</button>
 
-    <div id="status"></div>
-    <button id="save">Add to Favourites</button>
+  <h2>My Favourites</h2>
+  <div id="favorites-list"></div>
+  <div id="no-prediction"></div>
+  <ul id="upcoming"></ul>
 
-    <h4 id="yourTimes"></h4>
-    <h4 id="no-prediction"></h4>
-    <p id="routeDirections"></p>
-    <ul id="upcoming"></ul>
-  </div>
+
+  <style>
+    body {
+      font-family: 'Open Sans', sans-serif;
+      min-width: 357px;
+      overflow-x: hidden;
+    }
+
+    .styled-select select {
+      background: transparent;
+      width: 350px;
+      padding: 5px;
+      font-size: 15px;
+      line-height: 1;
+      border: 0;
+      border-radius: 3px;
+      height: 34px;
+      -webkit-appearance: none;
+    }
+
+    .styled-select {
+      width: 350px;
+      height: 34px;
+      overflow: hidden;
+      background: url('Images/select-arrow.png') no-repeat right #ddd;
+      border: 1px solid #ccc;
+    }
+
+    #upcoming {
+      list-style: none;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 14px;
+    }
+
+/*    #upcoming li:first-child {
+      font-size: 40px;
+    }
+    */
+    #status {
+      padding-top: 20px;
+    }
+
+    .remove-button {
+      position: absolute;
+      left: 230px;
+      padding: 2px;
+    }
+  </style>
 
   <style>
     body {
@@ -91,7 +133,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/jquery.xml2json.js"></script>
   <script src="js/moment.js"></script>
-  <script src="js/eventPage.js"></script>
+  <script src="js/options.js"></script>
 </body>
 </html>
 
